--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
   "devDependencies": {
     "bulma": "^0.9.2",
     "node-sass": "^5.0.0"
+  },
+  "dependencies": {
+    "axios": "^0.21.1"
   }
 }
