--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "node-sass": "^5.0.0"
   },
   "dependencies": {
-    "axios": "^0.21.1"
+    "axios": "^0.21.1",
+    "node-fetch": "^2.6.1"
   }
 }
